[package]
name = "libp2p-bitswap"
version = "0.25.1"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Implementation of the ipfs bitswap protocol."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ipfs-rust/libp2p-bitswap"

[features]
compat = ["prost", "prost-build"]

[build-dependencies]
prost-build = { version = "0.11", optional = true }

[dependencies]
async-trait = "0.1"
fnv = "1"
futures = "0.3"
lazy_static = "1.4"
libipld = { version = "0.16", default-features = false }
libp2p = { version = "0.52", features = ["request-response"] }
prometheus = "0.13"
prost = { version = "0.11", optional = true }
thiserror = "1.0"
tracing = "0.1"
unsigned-varint = { version = "0.7", features = ["futures", "std"] }

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
env_logger = "0.10"
libipld = { version = "0.16", default-features = false, features = ["dag-cbor",] }
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "rsa", "async-std"] }
multihash = { version = "0.18.0", default-features = false, features = ["blake3", "sha2"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
